--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     instance_type: linux_x2
     max_build_duration: 120
     environment:
-      flutter: stable
+      flutter: latest
       java: 17
     triggering:
       events:
