Fix Flutter and Kotlin version compatibility: use Flutter 3.24.0 and Kotlin 1.9.24

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,7 @@ workflows:
     instance_type: linux_x2
     max_build_duration: 120
     environment:
-      flutter: latest
+      flutter: 3.24.0
       java: 17
     triggering:
       events:
