fix: simplify codemagic.yaml - remove multiline script syntax

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -13,11 +13,9 @@ workflows:
         - main
     scripts:
       - name: Get Flutter dependencies
-        script: |
-          flutter pub get
+        script: flutter pub get
       - name: Build APK
-        script: |
-          flutter build apk --release
+        script: flutter build apk --release
     artifacts:
       - build/app/outputs/flutter-apk/app-release.apk
     publishing:
