fix: change branches to branch in triggering configuration for Codemagic compatibility

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,8 +9,7 @@ workflows:
     triggering:
       events:
         - push
-      branches:
-        - main
+      branch: main
     scripts:
       - name: Get Flutter dependencies
         script: flutter pub get
